lipu-pi-nasin-sewi: prep

--- a/lipu-pi-nasin-sewi/1.md
+++ b/lipu-pi-nasin-sewi/1.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa wan
+title: lipu nasin la, kipisi nanpa wan • lipu pi nasin sewi
 sidebar:
   - title: "kipisi ante"
     text: |
@@ -9,30 +9,19 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-| Chinese | Toki Pona / English
-|:-:|:-
-| 道可道非常道     | jan li ken nasin e nasin • nasin ni li sama ala e nasin lon
-| ^^               | The Way that can be followed is not the eternal Way.
-| 名可名非常名     | jan li ken nimi e nimi • nimi ni li sama ala e nimi lon
-| ^^               | The name that can be named is not the eternal name.
-| 无名天地之始     | ona pi nimi ala li tan e sewi li tan e ma
-| ^^               | The nameless is the origin of heaven and earth
-| 有名万物之母     | nimi li mama e ijo ale
-| ^^               | While naming is the origin of the myriad things.
-| 故常无欲以观其妙 | jan pi wile ala li lukin e nasa wawa
-| ^^               | Therefore, always desireless, you see the mystery
-| 常有欲以观其徵   | jan pi wile ale li lukin e ilo lon
-| ^^               | Ever desiring, you see the manifestations.
-| 此两者同         | tu ni li sama
-| ^^               | These two are the same—
-| 出而异名         | taso la, nimi pi tu ni li sama ala
-| ^^               | When they appear they are named differently.
-| 同谓之玄         | sama ni li seme
-| ^^               | This sameness is the mystery,
-| 玄之又玄         | weka sona li sama ni
-| ^^               | Mystery within mystery;
-| 衆妙之门         | ni li open e nasa wawa mute
-| ^^               | The door to all marvels.
+{:.loseta}
+|:-:|-|-
+| 道可道非常道     | jan li ken nasin e nasin • nasin ni li sama ala e nasin lon | The Way that can be followed is not the eternal Way.
+| 名可名非常名     | jan li ken nimi e nimi • nimi ni li sama ala e nimi lon     | The name that can be named is not the eternal name.
+| 无名天地之始     | ona pi nimi ala li tan e sewi li tan e ma                   | The nameless is the origin of heaven and earth
+| 有名万物之母     | nimi li mama e ijo ale                                      | While naming is the origin of the myriad things.
+| 故常无欲以观其妙 | jan pi wile ala li lukin e nasa wawa                        | Therefore, always desireless, you see the mystery
+| 常有欲以观其徵   | jan pi wile ale li lukin e ilo lon                          | Ever desiring, you see the manifestations.
+| 此两者同         | tu ni li sama                                               | These two are the same—
+| 出而异名         | taso la, nimi pi tu ni li sama ala                          | When they appear they are named differently.
+| 同谓之玄         | sama ni li seme                                             | This sameness is the mystery,
+| 玄之又玄         | weka sona li sama ni                                        | Mystery within mystery;
+| 众妙之门         | ni li open e nasa wawa mute                                 | The door to all marvels.
 
 {% include kipisi-nav.html num=1 %}
 
