--- a/lipu-pi-nasin-sewi/3.md
+++ b/lipu-pi-nasin-sewi/3.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 3
+title: lipu nasin la, kipisi nanpa 3 • lipu pi nasin sewi
 sidebar:
   - title: "kipisi ante"
     text: |
@@ -10,32 +10,24 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-| Chinese | Toki Pona / English
-|:-:|:-
-| 不尚贤使民不争         | jan li olin ala e jan wawa la: jan ale li wile ala suli.
-| ^^                     | If you do not adulate the worthy, you will make others non-contentious.
-| 不贵难得之货使民不为盗 | jan li olin ala e ijo mani la: jan ale li alasa ala jo.
-| ^^                     | If you do not value rare treasures, you will stop others from stealing.
-| 不见可欲使民心不乱     | jan li lukin ala e ilo alasa la: jan ale li nasa ala.
-| ^^                     | If people do not see desirables, they will not be agitated.
-| 是以圣人之治           | jan sewi li lawa la,
-| ^^                     | Therefore, when the sage governs,
-| 虚其心                 | tenpo ni li nasa ala e pilin pi jan mute.
-| ^^                     | He clears people's minds,
-| 实其腹                 | tenpo ni li jo e moku tawa jan mute.
-| ^^                     | Fills their bellies,
-| 弱其志                 | tenpo ni li weka e wile pi jan mute.
-| ^^                     | Weakens their ambition, (and)
-| 强其骨                 | tenpo ni li wawa e sijelo pi jan mute.
-| ^^                     | Strengthens their bones.
-| 常使民无知无欲         | jan pi suno ala en jan pi wile ala la,
-| ^^                     | If the people are kept without cleverness and desire,
-| 使夫知者不敢为也       | jan suno li wile ala nasin.
-| ^^                     | It will make the intellectuals not dare to meddle.
-| 为无为则无不治         | pali e pali ala la: ken lawa e ilo ale.
-| ^^                     | Acting without contrivance, there is no lack of manageability.
+{:.loseta}
+|:-:|-|-
+| 不尚贤使民不争         | jan li olin ala e jan wawa la: jan ale li wile ala suli. | If you do not adulate the worthy, you will make others non-contentious.
+| 不贵难得之货使民不为盗 | jan li olin ala e ijo mani la: jan ale li alasa ala jo.  | If you do not value rare treasures, you will stop others from stealing.
+| 不见可欲使民心不乱     | jan li lukin ala e ilo alasa la: jan ale li nasa ala.    | If people do not see desirables, they will not be agitated.
+| 是以圣人之治           | jan sewi li lawa la,                                     | Therefore, when the sage governs,
+| 虚其心                 | tenpo ni li nasa ala e pilin pi jan mute.                | He clears people's minds,
+| 实其腹                 | tenpo ni li jo e moku tawa jan mute.                     | Fills their bellies,
+| 弱其志                 | tenpo ni li weka e wile pi jan mute.                     | Weakens their ambition, (and)
+| 强其骨                 | tenpo ni li wawa e sijelo pi jan mute.                   | Strengthens their bones.
+| 常使民无知无欲         | jan pi suno ala en jan pi wile ala la,                   | If the people are kept without cleverness and desire,
+| 使夫知者不敢为也       | jan suno li wile ala nasin.                              | It will make the intellectuals not dare to meddle.
+| 为无为则无不治         | pali e pali ala la: ken lawa e ilo ale.                  | Acting without contrivance, there is no lack of manageability.
 
 {% include kipisi-nav.html num=3 %}
+
+-------
+{:#sitelen}
 
 jan li olin ala e jan wawa la jan ale li wile ala suli.
 jan li olin ala e ijo mani la jan ale li alasa ala jo.
