--- a/lipu-pi-nasin-sewi/4.md
+++ b/lipu-pi-nasin-sewi/4.md
@@ -1,46 +1,53 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 4
+title: lipu nasin la, kipisi nanpa 4 • lipu pi nasin sewi
 sidebar:
-  - title: "kipisi monsi"
-    text: "[kipisi nanpa 3](3)"
   - title: "kipisi ante"
-    text: "[kipisi ale](index)"
-  - title: "kipisi sinpin"
-    text: "[kipisi nanpa 5](5)"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 3](3)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 5](5)
+      {:.kipisi-nav-sidebar}
 ---
 
-| Toki Pona | Chinese | English
-|-:|:-:|:-
-| nasin sewi li suli mute. jan li ken ala pali weka e ona. | 道沖而用之或不盈  | The Way is so vast that when you use it, something is always left.
-| suli a!                           | 淵兮              | How deep it is!
-| ona li mama e ijo ale.            | 似萬物之宗        | It seems to be the ancestor of the myriad things.
-| ona li sike e kiki.               | 挫其銳            | It blunts sharpness
-| ona li kipisi e nasa.             | 解其紛            | Untangles knots
-| ona li kon e kiwen.               | 和其光            | Softens the glare
-| ona li sama e tu.                 | 同其塵            | Unifies with the mundane.
-| wawa a!                           | 湛兮              | It is so full!
-| tenpo kama la ona li lon.         | 似或存            | It seems to have remainder.
-| mi suno ala la: seme li mama ona? | 吾不知誰之子      | It is the child of I-don't-know-who.
-| ona li mama e jan lawa wawa.      | 象帝之先          | And prior to the primeval Lord-on-high.
+{:.loseta}
+|:-:|-|-
+| 道冲而用之或不盈 | nasin sewi li suli mute. jan li ken ala pali weka e ona. | The Way is so vast that when you use it, something is always left.
+| 渊兮             | suli a!                           | How deep it is!
+| 似万物之宗       | ona li mama e ijo ale.            | It seems to be the ancestor of the myriad things.
+| 挫其锐           | ona li suwi e wawa.               | It blunts sharpness
+| 解其纷           | ona li pona e jaki.               | Untangles knots
+| 和其光           | ona li kon e kiwen.               | Softens the glare
+| 同其尘           | ona li wan e tu.                  | Unifies with the mundane.
+| 湛兮             | wawa a!                           | It is so full!
+| 似或存           | tenpo kama la ona li lon.         | It seems to have remainder.
+| 吾不知谁之子     | mi suno ala la: seme li mama ona? | It is the child of I-don't-know-who.
+| 象帝之先         | ona li mama e jan lawa wawa.      | And prior to the primeval Lord-on-high.
 
 {% include kipisi-nav.html num=4 %}
 
-* nasin sewi li suli mute. jan li ken ala pali weka e ona.
+-------
+{:#sitelen}
+
+nasin sewi li suli mute. jan li ken ala pali weka e ona.
+{:data-sitelen="true" data-sitelen-ratio="3"}
+
+suli a!
 {:data-sitelen="true" data-sitelen-ratio="1"}
 
-* suli a!
-* ona li mama e ijo ale.
-* ona li sike e KIKI.
-* ona li KIPISI e nasa.
-* ona li kon e kiwen.
-* ona li sama e tu.
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+ona li mama e ijo ale.
+ona li suwi e wawa.
+ona li pona e nasa.
+ona li kon e kiwen.
+ona li sama e tu.
+{:data-sitelen="true" data-sitelen-ratio="0.3"}
 
-* wawa a!
-* tenpo kama la ona li lon.
-* mi suno ala la seme li mama ona?
-* ona li mama e jan lawa wawa.
-{:data-sitelen="true" data-sitelen-ratio="1.5"}
+wawa a!
+{:data-sitelen="true" data-sitelen-ratio="1"}
+
+tenpo kama la ona li lon.
+mi suno ala la seme li mama ona?
+ona li mama e jan lawa wawa.
+{:data-sitelen="true" data-sitelen-ratio="0.3"}
 
 {% include sitelen-sitelen-renderer.html %}
