--- a/lipu-pi-nasin-sewi/5.md
+++ b/lipu-pi-nasin-sewi/5.md
@@ -1,29 +1,41 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 5
+title: lipu nasin la, kipisi nanpa 5 • lipu pi nasin sewi
 sidebar:
-  - title: "kipisi monsi"
-    text: "[kipisi nanpa 4](4)"
   - title: "kipisi ante"
-    text: "[kipisi ale](index)"
-  - title: "kipisi sinpin"
-    text: "[kipisi nanpa 6](6)"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 4](4)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 6](6)
+      {:.kipisi-nav-sidebar}
 ---
 
-| Toki Pona | Chinese | English
-|-:|:-:|:-
-| sewi en ma li _olin ala e jan_ | 天地不仁           | Heaven and Earth are not humane,
-| ona li _lawa tawa_ ijo ale | 以萬物爲芻狗       | And regard the myriad things as straw dogs.
-| _jan sona_ li _olin ala e jan_ | 聖人不仁           | The sage is not humane,
-| ona li _lawa tawa_ jan ale | 以百姓爲芻狗       | And regards all the people as straw dogs.
-|  | 天地之間其猶豪衞乎 | The space between Heaven and Earth is just like a bellows:
-|  | 虛而不屈           | Empty it, it is not exhausted.
-|  | 動而愈出           | Squeeze it and more comes out.
-|  | 多言數窮           | Excessive verbiage is usually a dead end
-|  | 不如守中           | Is not as good as holding to the center.
+{:.loseta}
+|:-:|-|-
+| 天地不仁           | sewi en ma li olin ala e jan              | Heaven and Earth are not humane,
+| 以万物为刍狗       | ona li lawa tawa ijo ale                  | And regard the myriad things as straw dogs.
+| 圣人不仁           | jan sewi li olin ala e jan                | The sage is not humane,
+| 以百姓为刍狗       | ona li lawa tawa jan ale                  | And regards all the people as straw dogs.
+| 天地之间其犹豪卫乎 | _insa pi ma pi sewi_ la, sama kon         | The space between Heaven and Earth is just like a bellows:
+| 虚而不屈           | jan li weka e ona la, kin ona li ken jo   | Empty it, it is not exhausted.
+| 动而愈出           | jan li pali e ona la, kin ona li ken pana | Squeeze it and more comes out.
+| 多言数穷           | nimi mute li nanpa ike                    | Excessive verbiage is usually a dead end
+| 不如守中           | pona la, awen e insa                      | Is not as good as holding to the center.
 
 {% include kipisi-nav.html num=5 %}
 
-{:data-sitelen="true" data-sitelen-ratio="1.5"}
+-------
+{:#sitelen}
+
+sewi en ma li olin ala e jan.
+ona li lawa tawa ijo ale.
+jan sewi li olin ala e jan.
+ona li lawa tawa jan ale.
+_insa pi ma pi sewi_ la, sama kon.
+jan li weka e ona la, kin ona li ken jo.
+jan li pali e ona la, kin ona li ken pana.
+nimi mute li nanpa ike.
+pona la, awen e insa.
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
 
 {% include sitelen-sitelen-renderer.html %}
