--- a/lipu-pi-nasin-sewi/6.md
+++ b/lipu-pi-nasin-sewi/6.md
@@ -1,25 +1,29 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 6
+title: lipu nasin la, kipisi nanpa 6 • lipu pi nasin sewi
 sidebar:
-  - title: "kipisi monsi"
-    text: "[kipisi nanpa 5](5)"
   - title: "kipisi ante"
-    text: "[kipisi ale](index)"
-  - title: "kipisi sinpin"
-    text: "[kipisi nanpa 7](7)"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 5](5)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 7](7)
+      {:.kipisi-nav-sidebar}
 ---
 
-* 
-{:data-sitelen="true" data-sitelen-ratio="10"}
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
-|  | 谷神不死 | The valley spirit never dies.
-|  | 是謂玄牝 | It is called “the mysterious female.”
-|  | 玄牝之門 | The opening of the mysterious female
-|  | 是謂天地之根 | Is called “the root of Heaven and Earth.”
-|  | 係係若存 | Continuous, seeming to remain.
-|  | 用之不勤 | Use it without exertion.
+{:.loseta}
+|:-:|-|-
+| 谷神不死     |  | The valley spirit never dies.
+| 是谓玄牝     |  | It is called “the mysterious female.”
+| 玄牝之门     |  | The opening of the mysterious female
+| 是谓天地之根 |  | Is called “the root of Heaven and Earth.”
+| 系系若存     |  | Continuous, seeming to remain.
+| 用之不勤     |  | Use it without exertion.
 
 {% include kipisi-nav.html num=6 %}
+
+-------
+{:#sitelen}
+
+{:data-sitelen="true" data-sitelen-ratio="10"}
+
+{% include sitelen-sitelen-renderer.html %}
