--- a/lipu-pi-nasin-sewi/81.md
+++ b/lipu-pi-nasin-sewi/81.md
@@ -1,28 +1,32 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin sewi — kipisi nanpa 81
+title: lipu nasin la, kipisi nanpa 81 • lipu pi nasin sewi
 sidebar:
-  - title: "kipisi monsi"
-    text: "[kipisi nanpa 80](80)"
   - title: "kipisi ante"
-    text: "[kipisi ale](index)"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 80](80)
+      * [kipisi ale](index)
+      {:.kipisi-nav-sidebar}
 ---
 
-| Toki Pona | Chinese | English
-|-:|:-:|:-
-| nimi lon li pona ala.  | 信言不美 | True words are not pretty.
-| nimi pona li lon ala.  | 美言不信 | Pretty words are not true.
-| jan pona li utala ala. | 善者不辯 | The good are not argumentative.
-| jan utala li pona ala. | 辯者不善 | The argumentative are not good.
-| jan pi suno wawa li lukin ala e lipu. | 知者不博 | The one who really knows is not broadly learned,
-| jan pi lukin lipu li suno ala wawa.   | 博者不知 | The broadly learned do not really know.
-| jan sewi li wile ala e ilo ale. | 聖人不積 | The sage does not hoard,
-|  | 旣以爲人己愈有 | She gives people her surplus.
-|  | 旣以與人己愈多 | Giving her surplus to others she is enriched.
-| nasin sewi li pona li jaki ala. | 天之道利而不害 | The way of Heaven is to help and not harm.
-| nasin jan sewi li pali li wile ala. | 聖人之道爲而不爭 | The way of the Sage is to act without wrangling.
+{:.loseta}
+|:-:|-|-
+| 信言不美         | nimi lon li pona ala.                 | True words are not pretty.
+| 美言不信         | nimi pona li lon ala.                 | Pretty words are not true.
+| 善者不辩         | jan pona li utala ala.                | The good are not argumentative.
+| 辩者不善         | jan utala li pona ala.                | The argumentative are not good.
+| 知者不博         | jan pi suno wawa li lukin ala e lipu. | The one who really knows is not broadly learned,
+| 博者不知         | jan pi lukin lipu li suno ala wawa.   | The broadly learned do not really know.
+| 圣人不积         | jan sewi li wile ala e ilo ale.       | The sage does not hoard,
+| 既以为人己愈有   |                                       | She gives people her surplus.
+| 既以与人己愈多   |                                       | Giving her surplus to others she is enriched.
+| 天之道利而不害   | nasin sewi li pona li jaki ala.       | The way of Heaven is to help and not harm.
+| 圣人之道为而不争 | nasin jan sewi li pali li wile ala.   | The way of the Sage is to act without wrangling.
 
 {% include kipisi-nav.html num=81 %}
+
+-------
+{:#sitelen}
 
 * nimi lon li pona ala.
 * nimi pona li lon ala.
