--- a/lipu-pi-nasin-sewi/9.md
+++ b/lipu-pi-nasin-sewi/9.md
@@ -1,17 +1,29 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 9
+title: lipu nasin la, kipisi nanpa 9 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 8](8)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 10](10)
+      {:.kipisi-nav-sidebar}
 ---
 
-持而盈之、不如其已。揣而梲之、不可長保。 金玉滿堂、莫之能守。 富貴而驕、自遺其咎。 功遂身退、天之道。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
-|  |  | To hold until full is not as good as stopping.
-|  |  | An oversharpened sword cannot last long.
-|  |  | A room filled with gold and jewels cannot be protected.
-|  |  | Boasting of wealth and virtue brings your demise.
-|  |  | After finishing the work, withdraw.
-|  |  | This is the Way of Heaven.
+{:.loseta}
+|:-:|-|-
+| 持而盈之不如其已 |  | To hold until full is not as good as stopping.
+| 揣而棁之不可长保 |  | An oversharpened sword cannot last long.
+| 金玉满堂莫之能守 |  | A room filled with gold and jewels cannot be protected.
+| 富贵而骄自遗其咎 |  | Boasting of wealth and virtue brings your demise.
+| 功遂身退         |  | After finishing the work, withdraw.
+| 天之道           |  | This is the Way of Heaven.
 
 {% include kipisi-nav.html num=9 %}
+
+-------
+{:#sitelen}
+
+{:data-sitelen="true" data-sitelen-ratio="1"}
+
+{% include sitelen-sitelen-renderer.html %}
