--- a/lipu-pi-nasin-sewi/10.md
+++ b/lipu-pi-nasin-sewi/10.md
@@ -1,28 +1,40 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 10
+title: lipu nasin la, kipisi nanpa 10 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 9](9)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 11](11)
+      {:.kipisi-nav-sidebar}
 ---
 
-載營塊抱一、能無離乎。專氣致柔、能嬰兒乎。濃除玄覽、能無疲乎。愛民治國、能無爲乎。天門開鬪、能爲雌乎。明白四達、能無知乎。生之、畜之。生而不有、 爲而不侍、長而不宰。是謂玄德
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
-|  |  | Pacifying the agitated material soul and holding to oneness:
-|  |  | Are you able to avoid separation?
-|  |  | Focusing your energy on the release of tension:
-|  |  | Can you be like an infant?
-|  |  | In purifying your insight:
-|  |  | Can you un-obstruct it?
-|  |  | Loving the people and ruling the state:
-|  |  | Can you avoid over-manipulation?
-|  |  | In opening and closing the gate of Heaven:
-|  |  | Can you be the female?
-|  |  | In illuminating the whole universe:
-|  |  | Can you be free of rationality?
-|  |  | Give birth to it and nourish it.
-|  |  | Produce it but don't possess it.
-|  |  | Act without expectation.
-|  |  | Excel, but don't take charge.
-|  |  | This is called Mysterious Virtue.
+{:.loseta}
+|:-:|-|-
+| 载营块抱一 |  | Pacifying the agitated material soul and holding to oneness:
+| 能无离乎   |  | Are you able to avoid separation?
+| 专气致柔   |  | Focusing your energy on the release of tension:
+| 能婴儿乎   |  | Can you be like an infant?
+| 浓除玄览   |  | In purifying your insight:
+| 能无疲乎   |  | Can you un-obstruct it?
+| 爱民治国   |  | Loving the people and ruling the state:
+| 能无为乎   |  | Can you avoid over-manipulation?
+| 天门开斗   |  | In opening and closing the gate of Heaven:
+| 能为雌乎   |  | Can you be the female?
+| 明白四达   |  | In illuminating the whole universe:
+| 能无知乎   |  | Can you be free of rationality?
+| 生之畜之   |  | Give birth to it and nourish it.
+| 生而不有   |  | Produce it but don't possess it.
+| 为而不侍   |  | Act without expectation.
+| 长而不宰   |  | Excel, but don't take charge.
+| 是谓玄德   |  | This is called Mysterious Virtue.
 
 {% include kipisi-nav.html num=10 %}
+
+-------
+{:#sitelen}
+
+{:data-sitelen="true" data-sitelen-ratio="1"}
+
+{% include sitelen-sitelen-renderer.html %}
