--- a/lipu-pi-nasin-sewi/7.md
+++ b/lipu-pi-nasin-sewi/7.md
@@ -1,19 +1,31 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 7
+title: lipu nasin la, kipisi nanpa 7 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 6](6)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 8](8)
+      {:.kipisi-nav-sidebar}
 ---
 
-天長地久。天地所以能長且久者、以其不自生。故能長生 是以聖人、後其身而身先、外其身而身 非以其無私耶。故能成其私。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
-|  |  | Heaven and Earth last forever.
-|  |  | The reason that Heaven and Earth are able to last forever
-|  |  | Is because they do not give birth to themselves.
-|  |  | Therefore, they are always alive.
-|  |  | Hence, the sage puts herself last and is first.
-|  |  | She is outside herself and therefore her self lasts.
-|  |  | Is it not through her selflessness
-|  |  | That she is able to perfect herself?
+{:.loseta}
+|:-:|-|-
+| 天长地久             |  | Heaven and Earth last forever.
+| 天地所以能长且久者   |  | The reason that Heaven and Earth are able to last forever
+| 以其不自生           |  | Is because they do not give birth to themselves.
+| 故能长生             |  | Therefore, they are always alive.
+| 是以圣人后其身而身先 |  | Hence, the sage puts herself last and is first.
+| 外其身而身           |  | She is outside herself and therefore her self lasts.
+| 非以其无私耶         |  | Is it not through her selflessness
+| 故能成其私           |  | That she is able to perfect herself?
 
 {% include kipisi-nav.html num=7 %}
+
+-------
+{:#sitelen}
+
+{:data-sitelen="true" data-sitelen-ratio="1"}
+
+{% include sitelen-sitelen-renderer.html %}
