--- a/lipu-pi-nasin-sewi/8.md
+++ b/lipu-pi-nasin-sewi/8.md
@@ -1,22 +1,34 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 8
+title: lipu nasin la, kipisi nanpa 8 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 7](7)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 9](9)
+      {:.kipisi-nav-sidebar}
 ---
 
-上善若水。水善利萬物而不爭、處衆人之所惡。故幾於道。居善地、心善淵、與善仁、言善信、正善治、事善能、動善時。夫唯不爭、故無尤。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
-|  |  | The highest goodness is like water.
-|  |  | Water easily benefits all things without struggle.
-|  |  | Yet it abides in places that men hate.
-|  |  | Therefore it is like the Way.
-|  |  | For dwelling, the Earth is good.
-|  |  | For the mind, depth is good.
-|  |  | The goodness of giving is in the timing.
-|  |  | The goodness of speech is in honesty.
-|  |  | In government, self-mastery is good.
-|  |  | In handling affairs, ability is good.
-|  |  | If you do not wrangle, you will not be blamed.
+{:.loseta}
+|:-:|-|-
+| 上善若水         |         | The highest goodness is like water.
+| 水善利万物而不争 |         | Water easily benefits all things without struggle.
+| 处众人之所恶     |         | Yet it abides in places that men hate.
+| 故几於道         |         | Therefore it is like the Way.
+| 居善地           | _awen_  | For dwelling, the Earth is good.
+| 心善渊           | _pilin_ | For the mind, depth is good.
+| 与善仁           |         | The goodness of giving is in the timing.
+| 言善信           |         | The goodness of speech is in honesty.
+| 正善治           |         | In government, self-mastery is good.
+| 事善能动善时     |         | In handling affairs, ability is good.
+| 夫唯不争故无尤   |         | If you do not wrangle, you will not be blamed.
 
 {% include kipisi-nav.html num=8 %}
+
+-------
+{:#sitelen}
+
+{:data-sitelen="true" data-sitelen-ratio="1"}
+
+{% include sitelen-sitelen-renderer.html %}
